crates/derive-typescript/src/snapshots/derive_typescript__test__missing_files_are_given_starters.snap
---
source: crates/derive-typescript/src/lib.rs
expression: "validated.generated_files.keys().collect::<Vec<_>>()"
---
[
    "file:///project/deno.json",
    "file:///project/flow_generated/typescript/acmeCo/orders.ts",
    "file:///project/orders/helpers.ts",
    "file:///project/orders/mod.ts",
]
