crates/derive-typescript/src/snapshots/derive_typescript__test__stderr_paths_are_relative_to_the_project.snap
---
source: crates/derive-typescript/src/lib.rs
expression: "rewrite_deno_stderr(stderr, std::path::Path::new(\"/tmp/.tmpABC\"),\n\"flow_generated/typescript/acmeCo/orders.ts\",)"
---
error: TS2322 at module.ts:12:5
    at flow_generated/typescript/acmeCo/orders.ts:40:3
    at main.ts:7:1
