crates/derive-typescript/src/snapshots/derive_typescript__test__stub.snap
---
source: crates/derive-typescript/src/lib.rs
expression: "codegen::stub_ts(&derived, &transforms)"
---
import { IDerivation, Document, EndpointConfig, Open, SourceFromOrders, SourceFromRefunds } from 'flow/acmeCo/orders.ts';

// Implementation for derivation acmeCo/orders.
// `EndpointConfig` is generated from the derivation's `spec.configSchema`.
export class Derivation extends IDerivation {
    constructor(open: Open, readonly config: EndpointConfig) {
        super(open, config);
    }

    fromOrders(_read: { doc: SourceFromOrders }): Document[] {
        throw new Error("Not implemented");
    }
    fromRefunds(_read: { doc: SourceFromRefunds }): Document[] {
        throw new Error("Not implemented");
    }
}
